app/para/globals.css
* {
  border: 0;
  padding: 0;
  margin: 0;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  width: 100%;
  height: 100vh;
}

#section1 {
  background-color: white;
  background-blend-mode: color-burn;
  mix-blend-mode: lighten;
}

section:nth-child(1) {
  background-image: url("/img/pic1.webp");
  background-size: cover;
  transition: ease-in;
}

section:nth-child(1):hover {
  background-image: url("/img/pic1.webp");
  background-size: cover;
}

section:nth-child(2) {
  background-color: maroon;
}

section:nth-child(3) {
  height: 400px;
  background-image: url("/img/pic1.webp");
  background-size: cover;
  background-attachment: fixed;
}

section:nth-child(3) {
  background-color: darkolivegreen;
}

